--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Le-Major';
+  src: url('/Le-Major.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Le-Major', Arial, sans-serif;
+}
 
 #root {
   max-width: 1280px;
